--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "Mon portfolio personnel de développeur web.",
     "scripts": {
         "start": "parcel ./public/index.html",
-        "build": "parcel build ./public/index.html --dist-dir ./dist"
+        "build": "parcel build ./public/index.html --dist-dir ./dist",
+        "bundle": "parcel ./parcel-bundle-reports/default.html"
     },
     "author": "",
     "license": "ISC",
