--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
     "description": "Mon portfolio personnel de développeur web.",
     "scripts": {
         "start": "parcel ./public/index.html",
-        "build": "parcel build ./public/index.html --dist-dir ./dist",
-        "bundle": "parcel ./parcel-bundle-reports/default.html"
+        "build": "parcel build ./public/index.html --dist-dir ./dist"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.5",
-        "parcel": "^2.9.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.1.1",
@@ -20,6 +18,19 @@
     "devDependencies": {
         "@parcel/transformer-inline-string": "^2.9.3",
         "autoprefixer": "^10.4.14",
+        "parcel": "^2.9.3",
+        "postcss": "^8.4.27",
         "process": "^0.11.10"
+    },
+    "postcss": {
+        "plugins": {
+            "autoprefixer": {
+                "overrideBrowserslist": [
+                    "> 1%",
+                    "last 4 versions",
+                    "ie >= 9"
+                ]
+            }
+        }
     }
 }
